# whispyrkeep

./: .dockerignore  .env.example  .gitignore  AGENTS.md  BACKLOG.md  CLAUDE.md  README.md  TODO.md  docker-compose.yml
backend/: conftest.py  manage.py  pyproject.toml  requirements.txt
backend/apps/: __init__.py
backend/apps/accounts/: __init__.py  admin.py  models.py  serializers.py  urls.py  views.py
backend/apps/accounts/migrations/: 0001_initial.py
backend/apps/campaigns/: __init__.py  admin.py  models.py  serializers.py  urls.py  views.py
backend/apps/characters/: __init__.py  admin.py  apps.py  leveling.py  models.py  serializers.py  services.py  urls.py  views.py
backend/apps/exports/: __init__.py  admin.py  models.py  serializers.py  tasks.py  urls.py  views.py
backend/apps/llm_config/: __init__.py  admin.py  apps.py  encryption.py  models.py  serializers.py  services.py  urls.py  views.py
backend/apps/lore/: __init__.py  admin.py  apps.py  models.py  serializers.py  tasks.py  urls.py  views.py
backend/apps/mechanics/: __init__.py  apps.py  models.py
backend/apps/safety/: __init__.py  models.py
backend/apps/srd/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
backend/apps/timeline/: __init__.py  apps.py  models.py  tasks.py
backend/apps/universes/: __init__.py  admin.py  apps.py  homebrew_models.py  models.py  schemas.py  serializers.py  tasks.py  urls.py  views.py
backend/tests/: __init__.py
backend/whispyrkeep/: __init__.py  asgi.py  celery.py  health.py  settings.py  urls.py  wsgi.py
docs/: SRD_LICENSE.md  (+1 more)
(+194 files in other folders)
